# learning-openai

./: .gitignore  README.md  doubts.md  main.py  my_chatbot.py  practice.py  pyproject.toml
assignments/: country_info_toolkit.py  mood_handoff.py  product_suggester.py
assignments/a/: pdf_reader.py  text_summerizer.py
assignments/pdf_summerizer/: extract_pdf_text.py  main.py
assignments/pdf_summerizer/a/: main.py
code/: agent_level.py  async_way.py  chainlit_app.py  context.py  dynamic_instructions.py  enable_tracing.py  global_level.py  handoffs.py  litellm.py  open_router.py  result.py  run_demo_loop.py  run_level.py  session.py  streaming.py  streaming_chainlit.py  sync_way.py  tools.py
docs/: chainlit_guide.md  context.md  core_concepts.md  streaming_guide.md  tools.md
notebook/: explore.md  linked_posts.md  point.md
