[project]
name = "learning-openai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.0",
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "google-generativeai>=0.8.5",
    "litellm>=1.74.3",
    "openai-agents>=0.1.0",
    "phonenumbers>=9.0.10",
    "python-dotenv>=1.1.1",
]
